fix visibility

--- a/assets/style.css
+++ b/assets/style.css
@@ -41,5 +41,9 @@
 .project-name > img{
     width: 250px;
     margin-bottom: 100px;
+    opacity: 0.5;
 }
 
+.donate-button-hint{
+    display: none;
+}
